neutral name for Citation Format Feature (instead of "Vorschlag")

--- a/locale/de_DE/locale.po
+++ b/locale/de_DE/locale.po
@@ -14,3 +14,6 @@ msgstr "Publications-Theme"
 
 msgid "plugins.themes.publications-theme.description"
 msgstr "Die OJS bzw. OMP Vorlage für iDAI.publications, basierend auf dem Standard-Theme."
+
+msgstr "submission.howToCite"
+msgstr "Zitationsformate"
